 - improved German translation, thanks to Silvério Santos
 - issue #176 : build with Gradle 4.6 and Gradle android plugin 3.2.1
 - issue #175 : build against Android SDK 9.0 (API 28)
 - issue #177 : increase minimum supported Android SDK 4.0 (API 14)
 - issue #167 : check application location access permissions
 - issue #178 : stop using Maven build
 - remove buildtime trend implementation

 v0.5.1 (released on 02Nov2018)
 - improved Polish translation, thanks to WaldiS
 - specify backup behaviour

 v0.5 (released on 14Jan2018)
 - translated to Croatian, thanks to Dag Velovic
 - build against Android SDK 5.1 (API 22)
 - issue #164 : display altitude/height in meters
 - issue #31 : save altitude and calculate height difference to destination
 - support RTL languages
 - translated to Chinese (China), thanks to YFdyh000
 - build against Android SDK 6.0 (API 23)
 - translated to Estonian, thanks to Kristjan Räts
 - translated to Norwegian Bokmål, thanks to Allan Nordhøy
 - translated to Polish, thanks to Dominik Danelski
 
 v0.4.1 (released on 08Jan2015)
 - translated to Sardinian, thanks to Lu Ca
 - translated to Hindi, thanks to Atul Pratap Singh
 - translation to Romanian completed, thanks to Eduard Moraru
 - translation to German completed, thanks to Niemand Jedermann

 v0.4 (released on 26Oct2014)
 - translated to Italian, thanks to Matteo Regazzi
 - translated to Spanish, thanks to alunacast38 and Swyter, J.S.Sebastian
 - translated to Korean, thanks to Cho Bkwon
 - display in About activity when app was built
 - translated to Belarusian, thanks to Kastuś Kašenia
 - translated to Catalan, thanks to Josep Constanti
 - CID 60861-60864 : fix Coverity issue : dereference null return value
 - build against Android SDK 4.4W (API 20)
 - translated to Russian, thanks to Олег Нощенко
 - issue #161 : implement isValidFragment to fix Android bug fixed in Android
 API 19 (Kitkat), thanks to Олег Нощенко for reporting