@@ -7,6 +7,7 @@
  - issue #167 : check application location access permissions
  - issue #178 : stop using Maven build
  - remove buildtime trend implementation
+ - use isOrientationLandscape() to set shorter strings
 
  v0.5.1 (released on 02Nov2018)
  - improved Polish translation, thanks to WaldiS
